# ns3-multirat

./: README.md
multiratpy/: ant_optimization.py  network_gen.py  result.py  route_gen.py
multiratpy/data/dynamicroutes/: mratinfo  networkinfo  nodeinfo  routes  status
multiratpy/data/examplenetwork/: mratinfo  nodeinfo  routes  status
multiratpy/data/experiment/: networkinfo  nodeinfo  routes  status
multiratpy/data/staticnetwork/: mratinfo  networkinfo  nodeinfo  routes  status
scratch/multirat/: CMakeLists.txt  dynamic-routes.cc  example.cc  experiments.cc  static-example.cc
scratch/multirat/lib/: multi-rat-client.cc  multi-rat-client.h  multi-rat-fileprotocol-header.cc  multi-rat-fileprotocol-header.h  multi-rat-fileprotocol-helper.cc  multi-rat-fileprotocol-helper.h  multi-rat-fileprotocol.cc  multi-rat-fileprotocol.h  multi-rat-header.cc  multi-rat-header.h  multi-rat-protocol.cc  multi-rat-protocol.h  multi-rat-tag.cc  multi-rat-tag.h  multi-rat-utility.cc  multi-rat-utility.h  packet-counter.cc  packet-counter.h
